--- a/site.html
+++ b/site.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Site da Empresa 2.0</title>
-</head>
+cls</head>
 <body>
   
 </body>
